plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.7'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '6.25.0'
	id 'jacoco'
}

group = 'com.umc'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.3.3'
	//implementation 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// hibernate
	implementation 'org.hibernate.orm:hibernate-core:6.0.2.Final'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	//querydsl dependencies 추가(스프링부트 3.0 이상)
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// spring security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'
	// OAuth2 클라이언트 + 리소스 서버 (소셜 로그인용)
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'


	// thymeleaf + security
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.2.RELEASE'

	// thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// AWS S3 연동
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'


	// JavaMail API 라이브러리
	implementation 'com.sun.mail:jakarta.mail:2.0.1'
	//jsoup 크롤링
	implementation 'org.jsoup:jsoup:1.17.2'

	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	//blue-green
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Google Gen AI SDK
	implementation 'com.google.genai:google-genai:1.46.0'

	//social login
	implementation 'com.google.api-client:google-api-client:2.8.0'
	implementation 'com.google.oauth-client:google-oauth-client:1.39.0'
	implementation 'com.google.auth:google-auth-library-oauth2-http:1.43.0'
	// AWS SES v2
	implementation 'software.amazon.awssdk:sesv2:2.26.31'

	// Firebase Admin SDK
	implementation 'com.google.firebase:firebase-admin:9.4.3'

	implementation 'net.coobird:thumbnailator:0.4.20'
}

clean {
	delete fileTree(dir: 'src/main/generated', include: '**/*.java')
}


sourceSets {
	main {
		java {
			srcDirs = ['src/main/java', 'src/main/resources', 'src/main/generated']
		}
	}
}

def querydslSrcDir = 'src/main/generated'
clean {
	delete file(querydslSrcDir)
}

tasks.withType(JavaCompile) {
	options.generatedSourceOutputDirectory = file(querydslSrcDir)
}

test {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

bootJar {
}

spotless {
	enforceCheck false
	java {
		target 'src/main/java/**/*.java', 'src/test/java/**/*.java'
		googleJavaFormat('1.22.0').aosp()
		trimTrailingWhitespace()
		endWithNewline()
		importOrder('java', 'javax', 'jakarta', 'org', 'com', '')
		removeUnusedImports()
	}
}

jacocoTestReport {
	dependsOn test

	reports {
		html.required = true
		xml.required = true
	}

	afterEvaluate {
		classDirectories.setFrom(
				files(classDirectories.files.collect {
					fileTree(dir: it, exclude: [
							// 인프라/설정
							'**/config/**',
							'**/*Application*',
							'**/Q*',
							// 도메인 모델 (엔티티, 열거형)
							'**/domain/**',
							// 데이터 전달 객체
							'**/dto/**',
							'**/converter/**',
							// API 인터페이스
							'**/web/api/**',
							// 예외 처리
							'**/apiPayload/**',
							// 리포지토리
							'**/repository/**',
							// 유효성 검사 애노테이션
							'**/validation/**',
							// JWT / 보안 인프라
							'**/jwt/CurrentUser*',
							'**/jwt/CurrentUserArgumentResolver*',
							'**/jwt/CustomUserDetails*',
							'**/jwt/CustomAuthenticationEntryPoint*',
							'**/jwt/CustomAccessDeniedHandler*',
							'**/jwt/SecurityErrorResponseWriter*',
							'**/jwt/JwtExceptionFilter*',
							'**/jwt/JwtAuthenticationFilter*',
							// OAuth2 인프라
							'**/oauth2/utils/**',
							'**/oauth2/mobile/client/**',
					])
				})
		)
	}
}
